Formation CRUD and Swagger associated documentation
