# back-end/routes/basic.js
@@ -1,8 +1,0 @@
-const express = require("express");
-const router = express.Router();
-
-router.get("/", function (req, res) {
-	res.send('Well go fuck yourself');
-});
-
-module.exports = router;
